--- a/Find_Bug/pom.xml
+++ b/Find_Bug/pom.xml
@@ -18,7 +18,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
-	<!-- Create report by mvn findbugs:findbugs -->
+	<!-- Create report by mvn findbugs:findbugs, you can view the report in findBugsXml.xml under target. -->
+	<!-- By running mvn findbugs:gui, you get a beautiful GUI bug report. -->
 	<!-- For more mvn goals, see https://gleclaire.github.io/findbugs-maven-plugin/plugin-info.html -->
 	<build>
 		<!-- To define the plugin version in your parent POM -->
